<resources>
    <string name="app_name">talking_crocodile</string>
    <string name="filler">filler</string>
    <string name="Rules">Правила</string>
    <string name="Resume">Продолжить</string>
    <string name="NewGame">Новая игра</string>
    <string name="GameName">Болтливый крокодил</string>
    <string name="Logo">logo</string>
    <string name="winnerTextView">Победителем считается команда, у которой количество слов достигло установленного значения. Раунды проходят пока не определен победитель.</string>
    <string name="gameLogo">TODO</string>
    <string name="description">Командная игра, основной целью в которой является объяснение слов</string>
    <string name="rules">Во время объяснения нельзя использовать однокоренные слова, озвучивать перевод слов с иностранных языков, а также явно показывать жестами.</string>
    <string name="goalImage">TODO</string>
    <string name="goalTextView">Задачей каждого игрока является объяснение как можно большего количества слов своим товарищам по команде.</string>
    <string name="rewardTextView">Отгаданное слово приносит команде одно очко, а за пропущенное слово команда штрафуется.</string>
    <string name="ruleImageView">TODO</string>
    <string name="rewardImageView">TODO</string>
    <string name="winnerImageView">TODO</string>
    <string name="circle">circle</string>
    <string name="countOfWordsString">Количество слов</string>
    <string name="valueOfWords">60</string>
    <string name="labelForVictory">для достижения победы</string>
    <string name="timeOfRound">Время раунда</string>
    <string name="timeOfRoundLabel">60</string>
    <string name="soundInApp">Звук в игре</string>
    <string name="enableSoundEffects">включить звуковые эффекты</string>
    <string name="countInSeconds">продолжительность в секундах</string>
    <string name="chargeForPass">Штраф за пропуск</string>
    <string name="ruleForCharge">каждое пропущенное слово отнимает 1 очко</string>
    <string name="continueTextView">ПРОДОЛЖИТЬ</string>
    <string name="_3">+3</string>
    <string name="header">header</string>
    <string name="guessWords"></string>

</resources>
