<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="250dp">

    <ImageView
        android:id="@+id/gameLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="35dp"
        android:contentDescription="@string/gameLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/description"
        android:layout_width="382dp"
        android:layout_height="51dp"
        android:layout_marginTop="10dp"
        android:text="@string/description"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameLogo" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:scrollbarAlwaysDrawHorizontalTrack="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/goalImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/goalImage"
                    app:srcCompat="@mipmap/ic_launcher"
                    tools:layout_editor_absoluteX="15dp"
                    tools:layout_editor_absoluteY="225dp" />

                <TextView
                    android:id="@+id/goalTextView"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:paddingStart="10dp"
                    android:paddingBottom="0dp"
                    android:text="@string/goalTextView"
                    android:textAlignment="viewStart"
                    tools:layout_editor_absoluteX="115dp"
                    tools:layout_editor_absoluteY="223dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp">

                <ImageView
                    android:id="@+id/ruleImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/ruleImageView"
                    android:paddingTop="10dp"
                    app:srcCompat="@mipmap/ic_launcher"
                    tools:layout_editor_absoluteX="15dp"
                    tools:layout_editor_absoluteY="337dp" />

                <TextView
                    android:id="@+id/ruleTextView"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:paddingStart="10dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="0dp"
                    android:text="@string/rules"
                    android:textAlignment="viewStart"
                    tools:layout_editor_absoluteX="115dp"
                    tools:layout_editor_absoluteY="336dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/rewardImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/rewardImageView"
                    android:paddingTop="10dp"
                    app:srcCompat="@mipmap/ic_launcher"
                    tools:layout_editor_absoluteX="15dp"
                    tools:layout_editor_absoluteY="449dp" />

                <TextView
                    android:id="@+id/rewardTextView"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:paddingStart="10dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="0dp"
                    android:text="@string/rewardTextView"
                    android:textAlignment="viewStart"
                    tools:layout_editor_absoluteX="115dp"
                    tools:layout_editor_absoluteY="450dp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/winnerImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/winnerImageView"
                    android:paddingTop="10dp"
                    app:srcCompat="@mipmap/ic_launcher"
                    tools:layout_editor_absoluteX="15dp"
                    tools:layout_editor_absoluteY="561dp" />

                <TextView
                    android:id="@+id/winnerTextView"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="0dp"
                    android:text="@string/winnerTextView"
                    android:textAlignment="viewStart"
                    tools:layout_editor_absoluteX="114dp"
                    tools:layout_editor_absoluteY="563dp" />

            </TableRow>
        </TableLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>